# jp-forms

./: main.py  pyproject.toml  shell.nix  test.py  test_pie_chart.py
forms/dao/: db.py
forms/travel/: form_traveler.py  form_traveler_in.py  form_traveler_out.py
forms/yearly/: db.py  form_ip_110.py  form_ip_210.py  form_ip_220.py  form_ip_230.py  form_ip_310.py  form_ip_310b.py  form_ip_420.py  form_ip_440.py  form_ip_440g.py  form_ip_480.py  form_ip_480a.py  form_ip_490.py  form_ip_510.py  form_ip_520.py  form_ip_520a.py  form_ip_520s.py  form_ip_530.py  form_ip_540.py  form_ip_540a.py  form_ip_540j.py  form_ip_540p.py  form_ip_540s.py  form_ip_540v.py  form_ip_610.py  form_ip_620.py  form_ip_710.py  form_ip_720.py  form_ip_810.py  form_jp_304.py  form_jp_361.py  form_jp_362.py  form_jp_363.py  form_jp_364.py  form_jp_375.py  form_jp_383.py  form_jp_529.py  form_jp_536_2.py  form_jp_541.py  form_jp_544.py  (+6 more)
src/viz/: data_viz.py
